--- a/R/estimation.Rmd
+++ b/R/estimation.Rmd
@@ -306,20 +306,32 @@ gof.od.full <- sienaGOF(model3, verbose=TRUE, varName="net",
 plot(gof.od.full)
 ```
 
-## Model 4: Test with outRate
+## Model 4: Additional Tests
 
 ```{r}
 effects.fix <- effects
 
-effects.fix <- setEffect(effects.fix, outRate, name="net", type="rate",
-                         fix=F, test=F, include=T)
+# Leads to high maximum convergence > 6
+# effects.fix <- setEffect(effects.fix, outRate, name="net", type="rate",
+#                         fix=F, test=F, include=F)
+# This should be included!
 effects.fix <- setEffect(effects.fix, RateX, name="net", type="rate",
-                         interaction1="devActLogVar", fix=F, test=F, include=F)
-effects.fix <- setEffect(effects.fix, outAct, fix=F, test=F, include=F)
+                         interaction1="devActLogVar", fix=F, test=F, include=T)
+# No realy improvement here, Wald statistics worse
+# effects.fix <- setEffect(effects.fix, outAct, fix=F, test=F, include=F)
+
+effects.fix <- setEffect(effects.fix, inPopSqrt, fix=F, test=F, include=T)
+effects.fix <- setEffect(effects.fix, outTrunc, parameter=2, fix=F, test=F, include=T)
+effects.fix <- setEffect(effects.fix, outIso, fix=F, test=F, include=F)
+effects.fix <- setEffect(effects.fix, antiInIso, fix=F, test=F, include=F)
+effects.fix <- setEffect(effects.fix, in2Plus, fix=F, test=F, include=F)
+effects.fix <- setEffect(effects.fix, in3Plus, fix=F, test=F, include=T)
 
 model4 <- siena07(algorithm, data=data, effects=effects.fix,
                   batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
                   byWave=T, nbrNodes=12)
+
+outTable(model4)
 
 wald4 <- Multipar.RSiena(model4, c(1:model4$pp))
 gof.string4 <- sprintf("%.2f (%d)", wald4$chisquare, wald4$df)
@@ -338,6 +350,38 @@ plot(gof.id.fix)
 gof.od.fix <- sienaGOF(model4, verbose=TRUE, varName="net",
                         OutdegreeDistribution, join=T, cumulative=F)
 plot(gof.od.fix)
+```
+
+## Model 5: More Tests
+
+```{r}
+# Leads to high maximum convergence > 6
+effects.fix <- setEffect(effects.fix, outTrunc, parameter=2, fix=F, test=F, include=F)
+
+model5 <- siena07(algorithm, data=data, effects=effects.fix,
+                  batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                  byWave=T, nbrNodes=12)
+
+outTable(model5)
+
+wald5 <- Multipar.RSiena(model5, c(1:model5$pp))
+gof.string5 <- sprintf("%.2f (%d)", wald5$chisquare, wald5$df)
+
+texreg::htmlreg(list(model1, model2, model3, model4, model5),
+                stars = c(0.1, 0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(
+                    gof.string1, gof.string2, gof.string3, gof.string4, gof.string5)),
+                file = 'tables/results.html')
+
+gof.id.fix2 <- sienaGOF(model5, verbose=TRUE, varName="net",
+                        IndegreeDistribution, join=T, cumulative=F)
+plot(gof.id.fix2)
+
+gof.od.fix2 <- sienaGOF(model5, verbose=TRUE, varName="net",
+                        OutdegreeDistribution, join=T, cumulative=F)
+plot(gof.od.fix2)
 ```
 
 # Model Forward-Selection
