--- a/R/estimation.Rmd
+++ b/R/estimation.Rmd
@@ -188,8 +188,6 @@ depDownDyad  <- varDyadCovar(depDownArray, nodeSets = c("devs", "pkgs"), type = 
 
 ## Initialization
 
-TODO: Add composition change after data accounts properly for joiners
-
 ```{r}
 data <- sienaDataCreate(net, comp,
                         devActLogVar, comIntLogVar, relActLogVar, ageLogVar,
@@ -199,17 +197,250 @@ saveRDS(data, "data/sienaData.rds")
 print01Report(data, modelname='hicss-2023-final')
 ```
 
-# Selected Models
+# Model Estimations
 
 ## Initialize Algorithm
 
 ```{r}
 algorithm <- sienaAlgorithmCreate(projname='hicss-2023-final',
                                   seed=17,
-                                  n3=3000) # 1000 standard, 3000 for pub
+                                  n3=3000) # 1000 standard, 3000 for publication
 effects <- getEffects(data, nintn = 50)
 effectsDocumentation(effects)
 ```
+
+## Model 1
+
+In the first model, we add endogenous structural effects to the model. Initial
+data analysis showed a skewed out-degree distribution. In this case, it is advised
+to let the rate function depend on a covariate (Ripley et al. 2022); in our case
+developer activity. Furthermore, we add an effect for the in-degree popularity
+of a package.
+
+```{r}
+effects1 <- effects
+effects1 <- setEffect(effects1, RateX, name="net", type="rate",
+                      interaction1="devActLogVar",
+                      fix=T, test=T, include=T)
+effects1 <- setEffect(effects1, inPopSqrt,
+                      fix=T, test=T, include=T)
+
+model1.stt <- siena07(algorithm, data=data, effects=effects1,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      byWave=T, nbrNodes=4)
+summary(model1.stt)
+```
+
+The score-test for (1) the effect of developer activity on the rate function
+(chi-square = 43.5490, p < 0.001) and (2) the in-degree popularity effect
+(squared) (chi-square = 214.0247, p < 0.0001) indicates that both effects should
+be included in the model.
+
+```{r}
+effects1 <- effects
+effects1 <- setEffect(effects1, RateX, name="net", type="rate", interaction1="devActLogVar",
+                      fix=F, test=F, include=T)
+effects1 <- setEffect(effects1, inPopSqrt,
+                      fix=F, test=F, include=T)
+
+model1 <- siena07(algorithm, data=data, effects=effects1,
+                  batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                  byWave=T, nbrNodes=4)
+summary(model1)
+
+# Wald-type test
+wald1 <- Multipar.RSiena(model1, c(4:model1$pp))
+
+siena.table(model1, sig=T, type="html", file="tables/results_model1_final.html")
+saveRDS(model1, "models/model1_final.rds")
+```
+
+Maximum convergence is < 0.08 and all t-ratios < |0.1|. There is also no critical
+correlation between parameter estimates. The highest correlation is between
+out-degree (density) and in-degree popularity (-0.874). The Wald-type test for
+joint significance of the three effects shows that the affiliation network
+depends on these effects (chi-squared = 2390.72, d.f. = 3;  p < 0.001).
+
+Now, we test the goodness-of-fit for the in- and out-degree distribution.
+
+```{r}
+gof.id1 <- sienaGOF(model1, varName="net", IndegreeDistribution,
+                    join=T, cumulative=F, verbose=T)
+plot(gof.id1)
+
+gof.od1 <- sienaGOF(model1, varName="net", OutdegreeDistribution,
+                    join=T, cumulative=F, verbose=T)
+plot(gof.od1)
+```
+
+In-degree distribution looks good already (p: 0.094). However, the model does not
+fit the out-degree distribution yet (p: 0).
+
+## Model 2
+
+In the second model, we add the control effects for actor-specific covariates.
+For packages, we include the effect of community interest, release activity,
+and age. For developers, we include developer activity.
+
+First, we test these effects with the score-type test.
+
+```{r}
+effects2 <- effects1
+effects2 <- setEffect(effects2, egoX, name="net", interaction1="devActLogVar",
+                      fix=T, test=T, include=T)
+effects2 <- setEffect(effects2, altX, name="net", interaction1="comIntLogVar",
+                      fix=T, test=T, include=T)
+effects2 <- setEffect(effects2, altX, name="net", interaction1="relActLogVar",
+                      fix=T, test=T, include=T)
+effects2 <- setEffect(effects2, altX, name="net", interaction1="ageLogVar",
+                      fix=T, test=T, include=T)
+
+model2.stt <- siena07(algorithm, data=data, effects=effects2,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      byWave=T, nbrNodes=4)
+summary(model2.stt)
+```
+
+Besides developer activity (chi-squared = 220.7933, p-value < 0.0001), the package-
+related effects are not significant according to the score-type test (p > 0.03).
+
+Therefore, we test the variables of interest now.
+
+```{r}
+effects2 <- effects1
+
+effects2 <- setEffect(effects2, altX, name="net", interaction1="depsUpLogVar",
+                      fix=T, test=T, include=T)
+effects2 <- setEffect(effects2, altX, name="net", interaction1="depsDownLogVar",
+                      fix=T, test=T, include=T)
+effects2 <- setEffect(effects2, X, name="net", interaction1="depUpDyad",
+                      fix=T, test=T, include=T)
+effects2 <- setEffect(effects2, X, name="net", interaction1="depDownDyad",
+                      fix=T, test=T, include=T)
+
+model2.stt <- siena07(algorithm, data=data, effects=effects2,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      byWave=T, nbrNodes=4)
+summary(model2.stt)
+```
+
+The score-type test shows, that the dyadic covariates are highly significant,
+whereas the number of up- and downstream is not. Hence, we include both dyadic 
+effects in the model.
+
+```{r}
+effects2 <- effects1
+
+effects2 <- setEffect(effects2, X, name="net", interaction1="depUpDyad",
+                      fix=F, test=F, include=T)
+effects2 <- setEffect(effects2, X, name="net", interaction1="depDownDyad",
+                      fix=F, test=F, include=T)
+
+model2 <- siena07(algorithm, data=data, effects=effects2,
+                  batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                  byWave=T, nbrNodes=4)
+summary(model2)
+
+# Wald-type test
+wald2 <- Multipar.RSiena(model2, c(4:model2$pp))
+
+siena.table(model2, sig=T, type="html", file="tables/results_model2_final.html")
+saveRDS(model2, "models/model2_final.rds")
+```
+
+Maximum convergence ratio is good (0.08) and all convergence t-ratios < 0.06.
+Wald-type statistics decrease a little (chi-squared = 2305.23, d.f. = 5;  p < 0.001).
+Correlations between estimates basically unchanged.
+
+```{r}
+gof.id2 <- sienaGOF(model2, varName="net", IndegreeDistribution,
+                    join=T, cumulative=F, verbose=T)
+plot(gof.id2)
+
+gof.od2 <- sienaGOF(model2, varName="net", OutdegreeDistribution,
+                    join=T, cumulative=F, verbose=T)
+plot(gof.od2)
+```
+
+In-degree distribution improves from p = 0.094 to p = 0.169.
+Out-degree distribution still bad... (p = 0)
+
+## Model 3
+
+We test various structural effects next.
+
+```{r}
+effects3 <- effects2
+
+effects3 <- setEffect(effects3, cycle4, fix=T, test=T, include=T)
+effects3 <- setEffect(effects3, outActSqrt, fix=T, test=T, include=T)
+effects3 <- setEffect(effects3, outTrunc, parameter=2, fix=T, test=T, include=T)
+effects3 <- setEffect(effects3, outInAss, parameter=2, fix=T, test=T, include=T)
+
+effects3 <- setEffect(effects3, antiInIso, fix=F, test=F, include=F)
+effects3 <- setEffect(effects3, antiInIso2, fix=F, test=F, include=F)
+
+model3.stt <- siena07(algorithm, data=data, effects=effects3,
+                      batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                      byWave=T, nbrNodes=4)
+summary(model3.stt)
+```
+
+Results from the score-type test incidcate that 4-cycles is highly significant
+(chi-squared = 94.5300, p < 0.0001). So is out-degree activity and out-degree
+truncated.
+
+Initial analysis showed that density highly correlates with outTrunc and outActSqrt.
+Hence, we exclude them for now.
+
+```{r}
+effects3 <- effects2
+
+effects3 <- setEffect(effects3, cycle4, fix=F, test=F, include=T)
+
+model3 <- siena07(algorithm, data=data, effects=effects3,
+                  batch=F, verbose=F, returnDeps=T, initC=T, useCluster=T,
+                  byWave=T, nbrNodes=4)
+summary(model3)
+
+# Wald-type test
+wald3 <- Multipar.RSiena(model3, c(4:model3$pp))
+
+siena.table(model3, sig=T, type="html", file="tables/results_model3_final.html")
+saveRDS(model3, "models/model3_final.rds")
+```
+
+# CONTINUE
+
+```{r}
+gof.id3 <- sienaGOF(model3, varName="net", IndegreeDistribution,
+                    join=T, cumulative=F, verbose=T)
+plot(gof.id3)
+
+gof.od3 <- sienaGOF(model3, varName="net", OutdegreeDistribution,
+                    join=T, cumulative=F, verbose=T)
+plot(gof.od3)
+```
+
+# Results
+
+```{r}
+gof.string1 <- sprintf("%.2f (%d)", wald1$chisquare, wald1$df)
+gof.string2 <- sprintf("%.2f (%d)", wald2$chisquare, wald2$df)
+gof.string3 <- sprintf("%.2f (%d)", wald3$chisquare, wald3$df)
+
+texreg::htmlreg(list(model1, model2, model3),
+                stars = c(0.1, 0.05, 0.01, 0.001),
+                single.row = TRUE, include.iterations = FALSE,
+                custom.gof.rows = list(
+                  "Wald Statistics" = c(
+                    gof.string1, gof.string2, gof.string3)),
+                file = 'tables/results_final.html')
+```
+
+---
+
+# Previous Estimations
 
 ## Model 1: Endogenous
 
@@ -384,7 +615,7 @@ gof.od.fix2 <- sienaGOF(model5, verbose=TRUE, varName="net",
 plot(gof.od.fix2)
 ```
 
-# Model Forward-Selection
+# ARCHIVE: Model Forward-Selection
 
 ## Model 1
 
@@ -664,7 +895,7 @@ gof.od6 <- sienaGOF(ans.model6, verbose=TRUE, varName="net",
 plot(gof.od6)
 ```
 
-# Model Backward-Selection
+# ARCHIVE: Model Backward-Selection
 
 ## Model 7
 
